--- a/Tren.html
+++ b/Tren.html
@@ -1,19 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv=”refresh” content=”2" />
+  <!<meta http-equiv="refresh" content="1">
   <title>Tren H.</title>
   <link rel="stylesheet" type="text/css" href="general.css"> 
   <script type="text/javascript" src="mainTren.js"></script>
 </head>
 <body onload="main()">
 <div id="t">
-  <div id="tTop">
-    </br> 
-  </div> 
-  <div id="tBot">
-    </br>
+  <div id="tTop"></div> 
+  <div id="tBot"></div>
+  <div id="ren">
+    ren
   </div>  
 </div>
 
