--- a/Tren.html
+++ b/Tren.html
@@ -2,19 +2,16 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <!<meta http-equiv="refresh" content="1">
+  <meta http-equiv="refresh" content="4">
   <title>Tren H.</title>
   <link rel="stylesheet" type="text/css" href="general.css"> 
   <script type="text/javascript" src="mainTren.js"></script>
 </head>
 <body onload="main()">
-<div id="t">
-  <div id="tTop"></div> 
-  <div id="tBot"></div>
-  <div id="ren">
-    ren
-  </div>  
-</div>
+  <div class="header">
+    
+
+  </div>
 
 
 
