--- a/Tren.html
+++ b/Tren.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="mainTren.js"></script>
 </head>
 <body onload="main()">
+  <canvas id="backG"></canvas>
   <div class="header">
     
 
