--- a/Tren.html
+++ b/Tren.html
@@ -6,10 +6,12 @@
   <title>Tren H.</title>
   <link rel="stylesheet" type="text/css" href="general.css"> 
   <script type="text/javascript" src="mainTren.js"></script>
+  
+
 </head>
 <body onload="main()">
   <canvas id="backG"></canvas>
-  <div class="header">
+<!  <div class="header">
     
 
   </div>
